@@ -30,7 +30,6 @@
 #include <string.h>
 #include <gconf/gconf-client.h>
 #include <libgnomeui/gnome-desktop-thumbnail.h>
-#define GNOME_DESKTOP_USE_UNSTABLE_API
 #include <libgnomeui/gnome-bg.h>
 
 enum {
@@ -859,8 +858,8 @@ wp_update_preview (GtkFileChooser *chooser,
     if (mime_type)
     {
       pixbuf = gnome_desktop_thumbnail_factory_generate_thumbnail (data->thumb_factory,
-                                                           uri,
-                                                           mime_type);
+								   uri,
+								   mime_type);
     }
 
     if (pixbuf != NULL)
