@@ -22,6 +22,7 @@
 #define _GNOME_WP_INFO_H_
 
 #include <glib.h>
+#define GNOME_DESKTOP_USE_UNSTABLE_API
 #include <libgnomeui/gnome-desktop-thumbnail.h>
 
 typedef struct _GnomeWPInfo GnomeWPInfo;
