@@ -22,8 +22,8 @@
 #include <gio/gio.h>
 #include <gdk-pixbuf/gdk-pixbuf.h>
 #include <gtk/gtktreeview.h>
-#include <libgnomeui/gnome-desktop-thumbnail.h>
 #define GNOME_DESKTOP_USE_UNSTABLE_API
+#include <libgnomeui/gnome-desktop-thumbnail.h>
 #include <libgnomeui/gnome-bg.h>
 
 #include "gnome-wp-info.h"
