@@ -25,10 +25,10 @@
 #  include <config.h>
 #endif
 
-#include <gnome.h>
 #include <gdk/gdkx.h>
 #include <gconf/gconf-client.h>
 #include <glade/glade.h>
+#include <glib/gi18n.h>
 
 #include "capplet-util.h"
 
