@@ -26,7 +26,8 @@
 #  include <config.h>
 #endif
 
-#include <gnome.h>
+#include <glib/gi18n.h>
+#include <string.h>
 #include <gconf/gconf-client.h>
 #include <glade/glade.h>
 
