@@ -1,3 +1,12 @@
+Fri Oct 24 17:17:47 2008  Søren Sandmann  <sandmann@redhat.com>
+
+	* Get rid of a number of unnecessary gnome.h includes
+
+	* capplets/keybindings/gnome-keybinding-properties.c: Use
+	gtk_init() instead of gnome_program_init().
+
+	* A couple of formatting fixes
+
 Fri Oct 24 15:42:11 2008  Søren Sandmann  <sandmann@redhat.com>
 
 	* Use gtk_show_uri() instead of gnome_help_display_desktop()
